2004-01-06  Pascal Obry  <p.obry@wanadoo.fr>

	* cert.adb:
	Fix copyright notice.
	
	* makefile:
	(clean): Do not remove spec files as these are not generated now.
	(check_mem): Ensure that the rule never fails even if there is
	 some differences.

	* generate.adb:
	Do not generate unnedded spec files.
	Update copyright notice.

	* sessions2.adb:
	Add missing with for Ada.Exceptions.
	Update copyright notice.

2004-01-06  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Restore dropped OTH_TESTS.

2004-01-06  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Fix output problems introduced in previous check-in.
	Put in UNIX format.

	* generate.adb:
	(Test): Update output. Cleaner.
	
2004-01-05  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Concatenate most regression tests into single executable file.
	Add note about test restriction for some test sections.

2004-01-05  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* generate.adb:
	Remove DOS style CR at the end of line.

2004-01-02  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* generate.adb:
	Get test list from command line.

2003-12-31  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* strm.adb, strm.out:
	Add non keep-alive tests.

2003-12-24  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Move embedded resources build for zres, file2 and eres to the init
	 section.

2003-12-23  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* dummy.adb, dummy.out, zstrm2.adb, zstrm2.out:
	Add dummy output.

	* generate.adb:
	Generator for the fast test executor.

2003-12-22  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* eres.adb, eres.out, makefile:
	Test for AWS.Resources.Exist routine.

2003-12-19  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* tmem.adb:
	Test new Constant_Access type and Trim parameter.

2003-12-18  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zres.adb, zres.out:
	Add test getting compressed disk files.

	* file2.adb, file2.out:
	New test for gzipped files transfer.

	* tmem.adb, tmem.out: